--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
+APP_NAME=AtarimApi
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:SuFHrZiLtJzEPd9qrk3B/7AYdSeL6AoZHx5jfQH0eEc=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://atarim.test
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
